--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha index.spec.js"
+    "test": "NODE_ENV=test mocha index.spec.js",
+    "code-style": "jscs $(find . -name \"*.js\" -not -path \"./node_modules/*\")"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "chai": "2.1.0",
+    "jscs": "1.13.1",
     "mocha": "2.1.0"
   }
 }
