--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "https://github.com/emartech/escher-keypool-js.git"
   },
+  "pre-commit": [
+    "code-style"
+  ],
   "author": "Viktor Somodi <viktor.somodi@emarsys.com>",
   "license": "MIT",
   "bugs": {
@@ -24,6 +27,7 @@
   "devDependencies": {
     "chai": "2.1.0",
     "jscs": "1.13.1",
-    "mocha": "2.1.0"
+    "mocha": "2.1.0",
+    "pre-commit": "1.0.7"
   }
 }
