--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "escher-keypool",
-  "version": "1.2.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha index.spec.js"
+    "test": "NODE_ENV=test mocha index.spec.js",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/emartech/escher-keypool-js.git"
   },
   "pre-commit": [],
+  "release": {
+    "verifyConditions": {
+      "path": "./node_modules/semantic-release/dist/lib/plugin-noop.js"
+    }
+  },
   "author": "Viktor Somodi <viktor.somodi@emarsys.com>",
   "license": "MIT",
   "bugs": {
@@ -24,6 +29,7 @@
   "devDependencies": {
     "chai": "3.4.1",
     "mocha": "2.3.4",
-    "pre-commit": "1.1.2"
+    "pre-commit": "1.1.2",
+    "semantic-release": "4.3.5"
   }
 }
