--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test mocha index.spec.js",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "CI=true semantic-release"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,6 @@
   "devDependencies": {
     "chai": "4.1.2",
     "mocha": "5.2.0",
-    "semantic-release": "11.2.0"
+    "semantic-release": "15.5.0"
   }
 }
