--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/emartech/escher-keypool-js",
   "dependencies": {
-    "logentries-logformat": "0.2.0"
+    "@emartech/json-logger": "7.2.3"
   },
   "devDependencies": {
     "chai": "4.3.4",
